--- a/index.html
+++ b/index.html
@@ -1,56 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>文字数カウント</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>メンテナンス中</title>
 </head>
 <body>
-  <h1>文字数カウント</h1>
-
-  <div class="settings">
-    上限文字数: <input type="number" id="maxCharsInput" value="280" min="1"> 文字
-    <div style="margin-top:10px;">
-      <button id="set280Btn">280に設定</button>
-      <button id="set500Btn">500に設定</button>
-      <button id="set1000Btn">1000に設定</button>
-      <button id="setCustomBtn">カスタム設定</button>
-    </div>
-    <div id="recentButtons"></div>
-    <button id="clearRecentBtn" class="danger">履歴を削除</button>
-  </div>
-
-  <textarea id="textInput" placeholder="ここにテキストを入力してください..." aria-describedby="counterInfo"></textarea>
-
-  <div id="counterInfo" class="counter" aria-live="polite">
-    文字数: <span id="charCount">0</span><br>
-    バイト数: <span id="byteCount">0</span><br>
-    行数: <span id="lineCount">1</span><br>
-    残り文字数: <span id="remaining">280</span>
-  </div>
-
-  <button id="saveBtn" class="primary">テキストを保存 (.txt)</button>
-  <p class="note">※保存のときは端末に保存され、サーバーには送信されません。</p>
-
-  <div class="credit-section">
-    <h2>制作者情報</h2>
-    <p>© しのれーるらぼ / 制作者: 篠ノ井乗務区</p>
-    <p>
-      <a href="https://x.com/Shino_Rail" target="_blank">Twitter (Shino_Rail)</a> |
-      <a href="https://x.com/shinorail_lab" target="_blank">Twitter (Lab)</a>
-    </p>
-    <p>
-      <a href="http://sites.google.com/view/shinorail/" target="_blank">篠ノ井乗務区サイト</a> |
-      <a href="https://sites.google.com/view/shinorail-lab/" target="_blank">しのれーるらぼサイト</a>
-    </p>
-    <p>Copyright 2025 制作 / All Rights Reserved / 無断転載禁止 / 利用は個人目的に限る / 商用利用禁止</p>
-  </div>
-
-  <footer>
-    <p>このツールは入力文字数をカウントし、バイト数や行数も確認できるシンプルな文字数チェッカーです。</p>
-  </footer>
-
-  <script src="script.js"></script>
+    <h1>現在メンテナンス中です</h1>
+    <p>ご不便をおかけしますが、しばらくお待ちください。</p>
 </body>
 </html>
