--- a/terms.html
+++ b/terms.html
@@ -5,79 +5,117 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="language" content="ja">
-<title>利用規約 / Privacy Policy</title>
+<title>利用規約・プライバシーポリシー</title>
 
 <style>
-:root {
-  --bg:#f9f9f9; --card:#fff; --text:#1f2933; --muted:#555; --accent:#2563eb;
+body {
+  font-family:"Noto Sans JP","Hiragino Kaku Gothic ProN",system-ui,sans-serif;
+  background:#f9f9f9;
+  color:#1f2933;
+  max-width:900px;
+  margin:30px auto;
+  padding:20px;
 }
-[data-theme="dark"] {
-  --bg:#0f172a; --card:#1e293b; --text:#e5e7eb; --muted:#9ca3af; --accent:#60a5fa;
+
+section {
+  background:#ffffff;
+  border-radius:12px;
+  padding:20px;
+  margin-bottom:20px;
 }
-*{box-sizing:border-box;}
-body{
-  font-family:"Hiragino Kaku Gothic ProN","Noto Sans JP",system-ui,sans-serif;
-  background:var(--bg); color:var(--text);
-  max-width:900px; margin:30px auto; padding:20px;
+
+h1, h2 {
+  margin-top:0;
 }
-header{display:flex;justify-content:space-between;align-items:center;margin-bottom:20px;}
-section{background:var(--card);border-radius:12px;padding:20px;margin-bottom:20px;}
-h2{border-bottom:1px solid #ccc;padding-bottom:5px;}
-footer{text-align:center;font-size:.85em;color:var(--muted);}
-footer a{color:var(--accent);text-decoration:none;}
-button{padding:6px 10px;border:none;border-radius:6px;background:var(--accent);color:#fff;cursor:pointer;}
+
+footer {
+  text-align:center;
+  font-size:0.85em;
+  color:#555;
+}
+footer a {
+  color:#2563eb;
+  text-decoration:none;
+}
 </style>
 </head>
 
 <body>
-<header>
-  <h1>利用規約 / Privacy Policy</h1>
-  <button id="themeBtn">ダークモード</button>
-</header>
+
+<h1>利用規約・プライバシーポリシー</h1>
 
 <section>
-<h2>利用規約（日本語）</h2>
-<p>本ツールは非商用・個人利用に限り使用できます。</p>
-<p>商用利用、業務利用、広告収益を伴う利用は禁止します。</p>
-<p>外部リンク（Twitter 等）の内容について、制作者は責任を負いません。</p>
+<h2>利用規約</h2>
+<p>
+本ツールは、文字数・バイト数・行数をカウントし、テキストを端末に保存できる
+個人向けツールです。
+</p>
+<p>
+<strong>非商用・個人利用に限り</strong>使用できます。
+商用利用、広告収益を伴う利用、業務利用は禁止します。
+</p>
+</section>
+
+<section id="privacy">
+<h2>プライバシーポリシー</h2>
+<p>
+本サイトでは、入力されたテキストや個人情報を取得・保存・送信しません。
+</p>
+<p>
+すべての処理はユーザーのブラウザ内で完結します。
+Cookie による追跡やアクセス解析は行っていません。
+</p>
+</section>
+
+<section id="ads">
+<h2>広告ポリシー</h2>
+<p>
+本サイトでは、第三者配信の広告サービス（例：忍者AdMax）を利用しています。
+広告配信事業者は、Cookie 等を使用する場合がありますが、
+個人を特定できる情報は含まれません。
+</p>
+<p>
+広告の内容およびリンク先について、制作者は一切の責任を負いません。
+</p>
 </section>
 
 <section>
-<h2>Terms of Use (English)</h2>
-<p>This tool is provided for non-commercial personal use only.</p>
-<p>Commercial use, business use, or monetized use is strictly prohibited.</p>
-<p>The creator is not responsible for external linked websites.</p>
+<h2>表示モードについて</h2>
+<p>
+本サイトでは、ユーザーが選択した「スマホ表示」「PC表示」に基づき、
+画面レイアウトおよび広告表示形式を切り替えています。
+</p>
+<p>
+この設定は端末内（localStorage）にのみ保存され、
+外部サーバーへの送信や個人情報の取得は行われません。
+</p>
 </section>
 
 <section>
-<h2>プライバシーポリシー / Privacy Policy</h2>
-<p>入力されたテキストはサーバーへ送信されません。</p>
-<p>No personal data is collected or transmitted.</p>
+<h2>同意ログについて</h2>
+<p>
+本サイトでは、利用開始時の<strong>同意日時のみ</strong>を記録しています。
+</p>
+<p>
+氏名、IPアドレス、端末情報などの個人情報は一切取得していません。
+</p>
 </section>
 
 <section>
-<h2>ライセンス / License</h2>
+<h2>ライセンス</h2>
 <p>© 2025 Shinorail Lab / 篠ノ井乗務区</p>
 <p>
-Licensed under
+本ツールは
 <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">
 CC BY-NC 4.0
 </a>
+の下で提供されています。
 </p>
 </section>
 
 <footer>
-<p><a href="index.html">← ツールへ戻る</a></p>
+<p><a href="index.html">トップへ戻る</a></p>
 </footer>
 
-<script>
-'use strict';
-document.documentElement.lang='ja';
-let dark=false;
-document.getElementById('themeBtn').onclick=()=>{
-  dark=!dark;
-  document.documentElement.setAttribute('data-theme',dark?'dark':'light');
-};
-</script>
 </body>
 </html>
